...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Main View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Main View Controller" id="BYZ-38-t0r" customClass="ViewController" customModule="Richly" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                        <color key="backgroundColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="fUX-3h-Eyj"/>
                                        </constraints>
                                        <items>
                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="lX1-RO-YET"/>
                                            <barButtonItem title="Selection" style="done" id="OMh-tg-hOW">
                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                            </barButtonItem>
                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="4KG-2O-C05"/>
                                        </items>
                                        <color key="barTintColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </toolbar>
...
                                                <color key="tintColor" red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <connections>
                                                    <action selector="cancelAddEntry:" destination="VDX-gw-RxW" id="jpo-9s-ayN"/>
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="uYG-od-qjG"/>
                                            <barButtonItem title="Generate" style="plain" id="FFX-GM-cCK">
                                                <color key="tintColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <connections>
                                                    <action selector="generateJournal:" destination="VDX-gw-RxW" id="rsx-99-lLV"/>
                                                </connections>
                                            </barButtonItem>
                                        </items>
...
                                                <color key="tintColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <connections>
                                                    <action selector="backFromEditor:" destination="ppg-dl-LbO" id="goj-RL-OzW"/>
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="Vyu-h3-dLL"/>
                                            <barButtonItem title="Publish" id="YTF-gY-yjz">
                                                <color key="tintColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <connections>
                                                    <action selector="publishJournal:" destination="ppg-dl-LbO" id="FDL-ws-AdK"/>
                                                </connections>
                                            </barButtonItem>
                                        </items>
...
